--- a/DSA.html
+++ b/DSA.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="dsa.css">
+    <link rel="stylesheet" href="DSA.css">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="./tap-fav.jpeg" type="image/x-icon">
     <meta charset="UTF-8">
